@@ -3,6 +3,7 @@ package edu.colorado.phet.ec3;
 import edu.colorado.phet.common.view.util.ImageLoader;
 import edu.colorado.phet.ec3.model.EnergySkateParkModel;
 
+import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
 
@@ -15,10 +16,16 @@ import java.io.IOException;
 public abstract class Planet {
     private String name;
     private double gravity;
+    private Paint groundPaint;
+    private Paint groundLinePaint;
+    private boolean groundVisible;
 
-    protected Planet( String name, double gravity ) {
+    protected Planet( String name, double gravity, Paint groundPaint, Paint groundLinePaint, boolean groundVisible ) {
         this.gravity = gravity;
         this.name = name;
+        this.groundPaint = groundPaint;
+        this.groundLinePaint = groundLinePaint;
+        this.groundVisible = groundVisible;
     }
 
     public String getName() {
@@ -40,9 +47,25 @@ public abstract class Planet {
 
     protected abstract void setupImage( EnergySkateParkModule module );
 
+    public boolean isDefault() {
+        return false;
+    }
+
+    public Paint getGroundPaint() {
+        return groundPaint;
+    }
+
+    public Paint getGroundLinePaint() {
+        return groundLinePaint;
+    }
+
+    public boolean isGroundVisible() {
+        return groundVisible;
+    }
+
     public static class Space extends Planet {
         protected Space() {
-            super( EnergySkateParkStrings.getString( "space" ), 0.0 );
+            super( EnergySkateParkStrings.getString( "space" ), EnergySkateParkModel.G_SPACE, Color.black, Color.black, false );
         }
 
         protected void setupImage( EnergySkateParkModule module ) {
@@ -60,7 +83,7 @@ public abstract class Planet {
 
     public static class Earth extends Planet {
         protected Earth() {
-            super( EnergySkateParkStrings.getString( "earth" ), EnergySkateParkModel.G_EARTH );
+            super( EnergySkateParkStrings.getString( "earth" ), EnergySkateParkModel.G_EARTH, new Color( 100, 170, 100 ), new Color( 0, 130, 0 ), true );
         }
 
         protected void setupImage( EnergySkateParkModule module ) {
@@ -74,11 +97,15 @@ public abstract class Planet {
             }
             module.getEnergyConservationCanvas().getRootNode().setBackground( image );
         }
+
+        public boolean isDefault() {
+            return true;
+        }
     }
 
     public static class Moon extends Planet {
         public Moon() {
-            super( EnergySkateParkStrings.getString( "moon" ), EnergySkateParkModel.G_MOON );
+            super( EnergySkateParkStrings.getString( "moon" ), EnergySkateParkModel.G_MOON, Color.gray, Color.darkGray, true );
         }
 
         protected void setupImage( EnergySkateParkModule module ) {
@@ -95,7 +122,7 @@ public abstract class Planet {
 
     public static class Jupiter extends Planet {
         public Jupiter() {
-            super( EnergySkateParkStrings.getString( "jupiter" ), EnergySkateParkModel.G_JUPITER );
+            super( EnergySkateParkStrings.getString( "jupiter" ), EnergySkateParkModel.G_JUPITER, new Color( 173, 114, 98 ), new Color( 62, 44, 58 ), true );
         }
 
         protected void setupImage( EnergySkateParkModule module ) {
